[package]
name = "multiwii_serial_protocol_v2"
description = "A Multiwii Serial Protocol (MSP) implementation for Rust"
repository = "https://github.com/amfern/multiwii_serial_protocol.rs"
version = "0.1.12"
authors = ["Rudi Benkovic <rudi.benkovic@gmail.com>", "Ilya Guterman <amfernusus@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"

[dependencies]
packed_struct = "0.10"
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
defmt = { version = "0.3", optional = true }
crc-any = "2.3"

[features]
default = ["std", "serde"]
std = ["defmt/alloc"]
no_std = []
suppport_int32_setting_type = []
serde = ["dep:serde", "dep:serde_derive"]
defmt = ["dep:defmt"]
